fixed overflowing tooltip on line chart

--- a/src/app/municipality/municipality.component.scss
+++ b/src/app/municipality/municipality.component.scss
@@ -30,4 +30,8 @@ h1 {
   grid-template-columns: 1fr 1fr;
   grid-gap: 30px;
   margin: 30px 0;
+
+  @media screen and (max-width: 1100px) {
+    grid-template-columns: 1fr;
+  }
 }
